# MowisAI

./: .gitignore  .openclaude-profile.json  AGENTS.md  AGENT_PROFESSIONAL_FEATURES.md  BUILD_SUMMARY.txt  CLAUDE.md  COMMIT_MESSAGE.txt  COMPLETION_MANIFEST.md  Cargo.toml  Dockerfile  FILE_CONVERTER_FIX.md  FRONTEND_FEATURE_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MASSIVE_REFACTOR_PLAN.md  MIGRATION_GUIDE.md  MOWIS_ORCHESTRATION_SPEC.md  MowisAI 5-Layer Orchestration — Cursor Implementat 77cef859251d418ca58472d709c13243.md  MowisAI.md  PROFESSIONAL_INTEGRATION_LIVE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_v2.md  SETUP_COMPLETE.md  SOCKET_LIFECYCLE_TESTS.md  SOCKET_SERVER_SUMMARY.md  SPECIFICATION_v2.md  VERIFICATION_COMPLETE.md  codebase.md  codemagic.yaml  coversation.txt  deny.toml  install.sh  mowisai.py  package-lock.json  package.json  playwright.config.ts  setup.md  start.sh  (+5 more)
MowisAI-main/agentd/: Cargo.toml  README.md  test-verbose.js
MowisAI-main/agentd/examples/: orchestration_system.rs
MowisAI-main/agentd/src/: config.rs  hub_agent.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  runtime.rs  sandbox.rs  security.rs  setup.rs  socket_server.rs  tool_registry.rs  vertex_agent.rs  vm_backend.rs
MowisAI-main/agentd/src/orchestration/: agent_execution.rs  checkpoint.rs  health.rs  merge_reviewer.rs  merge_worker.rs  mock_agent.rs  mod.rs  (+6 more)
MowisAI-main/agentd/tests/: bucket_tests.rs  channel_tests.rs  http_tools_tests.rs  json_csv_tools_tests.rs  new_orchestration_tests.rs  tool_tests.rs
agentd/: CROSS_PLATFORM_CHANGES.md  Cargo.toml  DELIVERY_SUMMARY.md  QUICK_REFERENCE.md  TEST_REPORT.md  TODO.md  TOOL_INVENTORY.md  test-deep.js
agentd/benches/: scheduler_bench.rs
agentd/examples/: complete_usage.rs
agentd/scripts/: build-alpine-image.sh  build-rootfs.sh  build-static-agentd.sh  package-macos.sh  windows-installer.nsi
agentd/src/: agent.rs  agent_loop.rs  anthropic_agent.rs  api_server.rs  audit.rs  buckets.rs  channels.rs  claude_integration.rs  config.rs  crypto.rs  dependency_graph.rs  gemini_agent.rs  grok_agent.rs  groq_agent.rs  guest_backend.rs  hub_agent.rs  hub_agent_client.rs  image_manager.rs  intent.rs  lib.rs  logging.rs  main.rs  memory.rs  openai_agent.rs  persistence.rs  protocol.rs  sandbox.rs  security.rs  setup.rs  socket_server.rs  tool_registry.rs  tools.rs  version.rs  vertex_agent.rs  vm_backend.rs  worker_agent.rs
agentd/src/orchestration/: agent_execution.rs  agent_templates.rs  checkpoint.rs  complexity_classifier.rs  cost_tracker.rs  health.rs  merge_reviewer.rs  merge_worker.rs  mock_agent.rs  mod.rs  new_orchestrator.rs  planner.rs  planning_modes.rs  provider_client.rs  sandbox_topology.rs  scheduler.rs  simulate.rs  socket_client.rs  streaming.rs  types.rs  verification.rs  verify_layer6.rs  workspace.rs
agentd/src/skills/: creator.rs  mod.rs
agentd/src/tools/: channels.rs  common.rs  data.rs  datadog_api.rs  dev_tools.rs  discover_tools.rs  docker.rs  filesystem.rs  git.rs  github_api.rs  http.rs  jira_api.rs  kubernetes.rs  linear_api.rs  mod.rs  notion_api.rs  package_managers.rs  pagerduty_api.rs  plugins.rs  search.rs  sentry_api.rs  shell.rs  slack_api.rs  storage.rs  stripe_api.rs  utils.rs  vercel_api.rs  web.rs
agentd/src/tui/: app.rs  event.rs  mod.rs  shell.rs  ui.rs
agentd/tests/: channel_tests.rs  comprehensive_integration_tests.rs  desktop_session_test.rs  filesystem_tools_tests.rs  law_tests.rs  new_orchestration_tests.rs  sandbox_operations_tests.rs  sandbox_tests.rs  save_workflow_mock_test.rs  shell_tools_tests.rs  tool_tests.rs
agentd/tests/node/: common.js  index.js  package.json  testChannels.js  testGit.js  testKubernetes.js  testMemory.js  testSecrets.js  testShell.js
mowis-app/src-tauri/: Cargo.toml  tauri.conf.json
mowis-app/src-tauri/capabilities/: default.json
mowis-app/src-tauri/icons/: icon.icns
mowis-app/src-tauri/src/: agent.rs  commands.rs  main.rs  opencode.rs  process.rs
mowis-cli/: Cargo.toml
mowis-cli/src/: agent_client.rs  auth.rs  connection.rs  developer_mode.rs  linux.rs  macos.rs  main.rs  qemu.rs  types.rs  windows.rs
mowis-desktop/src-tauri/: Cargo.toml  tauri.conf.json
mowis-desktop/src-tauri/capabilities/: default.json
mowis-desktop/src-tauri/resources/: fetch-resources.sh
mowis-desktop/src-tauri/src/: agent_client.rs  agent_manager.rs  backend.rs  bridge_loop.rs  commands.rs  main.rs  orch_bridge.rs  sandbox.rs  state.rs  types.rs
mowis-executor/: Cargo.toml
mowis-executor/src/: init.rs  main.rs  sandbox.rs  server.rs  tools.rs
mowis-gui/: Cargo.toml  PLATFORM_MODULE_SUMMARY.md
mowis-gui/examples/: platform_demo.rs
mowis-gui/src/: animation.rs  app.rs  auth.rs  backend.rs  connection.rs  launcher.rs  main.rs  platform.rs  resources.rs  theme.rs  types.rs
mowis-gui/src/connections/: mod.rs  pipe.rs  pipe_bridge.rs  tcp.rs  unix.rs
mowis-gui/src/launchers/: linux.rs  macos.rs  mod.rs  qemu.rs  wsl2.rs
mowis-gui/src/platform/: auth.rs  checksum.rs  linux.rs  macos.rs  mod.rs  qemu.rs  windows.rs
mowis-gui/src/views/: build.rs  chat.rs  diff.rs  landing.rs  mod.rs  onboarding.rs
mowis-gui/src/widgets/: mod.rs
mowis-host/: Cargo.toml
mowis-host/src/: initrd.rs  lib.rs  main.rs  vsock_transport.rs
mowis-host/src/image/: mod.rs
mowis-host/src/transport/: mod.rs
mowis-host/src/tui/: app.rs  mod.rs  setup.rs  splash.rs  widgets.rs
mowis-host/src/vmm/: mod.rs  qemu.rs
mowis-orchestration/: Cargo.toml
mowis-orchestration/src/: captain.rs  conductor.rs  config.rs  crew.rs  critic.rs  crypto.rs  digest.rs  events.rs  host_tools.rs  lib.rs  merger.rs  plan.rs  providers.rs  summaries.rs  tools.rs
mowis-orchestration/src/prompts/: captain.md  conductor.md  conductor_classifier.md  crew.md  critic.md
mowis-orchestration/tests/: integration.rs
mowisai-engine/: .gitignore  Cargo.toml  enter-container.sh  mowisai_sessions.db  setup_rootfs.sh
mowisai-engine/src/: container.rs  executor.rs  main.rs  protocol.rs
runtime/: .gitignore  Cargo.toml
runtime/src/: agentd_client.rs  main.rs  runtime.rs
(+336 files in other folders)
