[workspace]
members = [
    "agentd",
    "agentd-protocol",
    "runtime",
    "mowis-desktop/src-tauri",
    "mowis-protocol",
    "mowis-host",
    "mowis-executor",
    "mowis-orchestration",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
