[package]
name = "agentd"
version = "0.2.0"
edition = "2021"
authors = ["MowisAI <info@mowis.ai>"]
description = "MowisAI — AI agent orchestration engine"

[[bin]]
name = "agentd"
path = "src/main.rs"

[lib]
name = "libagent"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]


[dependencies]
agentd-protocol = { path = "../agentd-protocol" }
runtime = { path = "../runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
nix = "0.26"
tempfile = "3.5"
lazy_static = "1.4"
clap = { version = "4.3", features = ["derive"] }
fastrand = "1.9"
which = "4"
csv = "1.2"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
base64 = "0.21"
rand = "0.8"
scopeguard = "1.2"
regex = "1"
glob = "0.3"
walkdir = "2"
ratatui = "0.26"
crossterm = "0.27"
tui-textarea = "0.4"
toml = "0.8"
textwrap = "0.16"
signal-hook = "0.3"
