[package]
name = "mowis-cli"
version = "0.1.0"
edition = "2021"
description = "MowisAI CLI — standalone CLI version of the desktop app with full debug logging"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"
dirs = "5"
async-trait = "0.1"
which = "6"
chrono = "0.4"
colored = "2"
rustyline = "14"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
