[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
authors = ["MowisAI <info@mowisai.com>"]
description = "Runtime control plane for agentd"
license = "MIT"
repository = "https://github.com/mowisai/agentd"

[[bin]]
name = "runtime"
path = "src/main.rs"

[dependencies]
agentd-protocol = { path = "../agentd-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
