[package]
name = "agentd"
version = "0.1.0"
edition = "2021"
authors = ["MowisAI <info@mowis.ai>"]
description = "Low-level runtime and API library for MowisAI agent sandbox engine."

[lib]
name = "libagent"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
agentd-protocol = { path = "../agentd-protocol" }
runtime = { path = "../runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
nix = "0.26"
tempfile = "3.5"
lazy_static = "1.4"
clap = { version = "4.3", features = ["derive"] }
fastrand = "1.9"
which = "4"
csv = "1.2"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
base64 = "0.21"
rand = "0.8"
scopeguard = "1.2"
