[package]
name = "mowis-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
which = "6"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

