[package]
name = "mowis-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
which = "6"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
lazy_static = "1.4"
gcp_auth = "0.12"
base64 = "0.22"
rsa = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

