[package]
name = "mowis-desktop"
version = "0.2.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
which = "6"
dirs = "5"
mowis-orchestration = { path = "../../mowis-orchestration" }
mowis-host = { path = "../../mowis-host" }
mowis-protocol = { path = "../../mowis-protocol" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

